--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,12 +7,13 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --first-color: #00095d; /* Dark Aesthetic Blue */
+    --first-color: 234; /* Dark Aesthetic Blue */
     
     /* Other color variables can remain the same as in the previous response or adjust as needed */
-    --first-color-second: hsl(var(--hue-color), 30%, 18%);
-    --first-color-alt: hsl(var(--hue-color), 20%, 20%);
-    --first-color-lighter: hsl(var(--hue-color), 30%, 45%);
+    --first-color: hsl(var(--hue-color), 95%, 51%);   
+    --first-color-second: hsl(var(--hue-color), 95%, 51%);
+    --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+    --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
     --title-color: hsl(var(--hue-color), 8%, 15%);
     --text-color: hsl(var(--hue-color), 8%, 45%);
     --text-color-light: hsl(var(--hue-color), 8%, 65%);
