--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,9 +7,9 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --first-color: 234; /* Dark Aesthetic Blue */
-    
-    /* Other color variables can remain the same as in the previous response or adjust as needed */
+    --hue-color: 234; /*250; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+
+    /* HSL color mode first color --> Hex	#f9660b*/
     --first-color: hsl(var(--hue-color), 95%, 51%);   
     --first-color-second: hsl(var(--hue-color), 95%, 51%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
@@ -22,7 +22,6 @@
     --container-color: #fff;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
-
 
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
@@ -70,16 +69,16 @@
     }
 }
 
-/* ========== Variables Dark theme ========== */
-body.dark-theme {
-  --first-color-second: hsl(220, 29%, 16%); /* Dark Blue */
-  --title-color: hsl(220, 8%, 95%); /* Light Blue */
-  --text-color: hsl(220, 8%, 75%); /* Light Gray */
-  --input-color: hsl(220, 29%, 16%); /* Dark Blue */
-  --body-color: hsl(220, 28%, 12%); /* Dark Blue */
-  --container-color: hsl(220, 29%, 16%); /* Dark Blue */
-  --scroll-bar-color: hsl(220, 12%, 48%); /* Dark Blue */
-  --scroll-thumb-color: hsl(220, 12%, 36%); /* Dark Blue */
+/*========== Variables Dark theme ==========*/
+body.dark-theme{
+  --first-color-second: hsl(var(--hue-color), 29%, 16%);
+  --title-color: hsl(var(--hue-color), 8%, 95%);
+  --text-color: hsl(var(--hue-color), 8%, 75%);
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 28%, 12%);
+  --container-color: hsl(var(--hue-color), 29%, 16%);
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
 }
 
 /*========== Button Dark/Light ==========*/
@@ -295,7 +294,7 @@ img {
 }
 
 .home__social-icon:hover{
-  color: var(--first-color);
+  color: var(--first-color-alt);
 }
 
 .home__blob{
@@ -1046,7 +1045,7 @@ img {
   font-size: var(--smaller-font-size);
   text-align: center;
   color: var(--text-color-light);
-  color: #00095d;
+  color: #FFF;
   margin-top: var(--mb-3);
 }
 
@@ -1055,7 +1054,7 @@ img {
 .footer__subtitle,
 .footer__link,
 .footer__social{
-  color: #00095d;
+  color: #FFF;
 }
 
 
