--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -742,6 +742,14 @@ img {
   margin-right: var(--mb-0-25);
 }
 
+.projects__content.project1 {
+  background-image: url('PredictA.jpg'); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
 /* Active Modal */
 .active-modal{
   opacity: 1;
